--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="resources/index.css" type="text/css" rel="stylesheet">
+        <link href="Resources/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <header>
-            <img class="logo" src="../Tea shop/Resources/Logo.png">
+            <img class="logo" src="Resources/Logo.png">
             <div class="navigation">
                 <a href="#mission">Mission</a>
                 <a href="#featured">Featured Tea</a>
@@ -15,7 +15,7 @@
 
 
         <div id="mission" class="intro">
-            <img src="../Tea shop/Resources/Background.jpeg">
+            <img src="Resources/Background.jpeg">
             <div>
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Smal Batch, Fair Trade, Organic Tea</h4>
@@ -31,23 +31,23 @@
                 
             <div class="teatypes">
                  <figure>
-                    <img src="../Tea shop/Resources/BerryBlitz.jpeg">
+                    <img src="Tea shop/Resources/BerryBlitz.jpeg">
                     <figcaption>Fall Berry Blitz Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="../Tea shop/Resources/SpicedRum.jpeg">
+                    <img src="Resources/SpicedRum.jpeg">
                     <figcaption>Spiced Rum Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="../Tea shop/Resources/Donut.jpeg">
+                    <img src="Resources/Donut.jpeg">
                     <figcaption>Seasonal Donuts</figcaption>
                 </figure>
                 <figure>
-                    <img src="../Tea shop/Resources/MyrtleAve.jpeg">
+                    <img src="Resources/MyrtleAve.jpeg">
                     <figcaption>Myrtle Ave Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="../Tea shop/Resources/BedfordBizarre.jpeg">
+                    <img src="Resources/BedfordBizarre.jpeg">
                     <figcaption>Bedford Bizaree Tea</figcaption>
                 </figure>
             </div>
