--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="TeaShop/Resources/index.css" type="text/css" rel="stylesheet">
+        <link href="Resources/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <header>
