fixed relative paths to images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
         <div id="mission" class="intro">
-            <img src="TeaShop/Resources/Background.jpeg">
+            <img src="Resources/Background.jpeg">
             <div>
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Smal Batch, Fair Trade, Organic Tea</h4>
@@ -31,23 +31,23 @@
                 
             <div class="teatypes">
                  <figure>
-                    <img src="TeaShop/Resources/BerryBlitz.jpeg">
+                    <img src="Resources/BerryBlitz.jpeg">
                     <figcaption>Fall Berry Blitz Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="TeaShop/Resources/SpicedRum.jpeg">
+                    <img src="Resources/SpicedRum.jpeg">
                     <figcaption>Spiced Rum Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="TeaShop/Resources/Donut.jpeg">
+                    <img src="Resources/Donut.jpeg">
                     <figcaption>Seasonal Donuts</figcaption>
                 </figure>
                 <figure>
-                    <img src="TeaShop/Resources/MyrtleAve.jpeg">
+                    <img src="Resources/MyrtleAve.jpeg">
                     <figcaption>Myrtle Ave Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="TeaShop/Resources/BedfordBizarre.jpeg">
+                    <img src="Resources/BedfordBizarre.jpeg">
                     <figcaption>Bedford Bizaree Tea</figcaption>
                 </figure>
             </div>
