--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="TeaShop/Resources/Logo.png">
+            <img class="logo" src="Resources/Logo.png">
             <div class="navigation">
                 <a href="#mission">Mission</a>
                 <a href="#featured">Featured Tea</a>
